--- a/user/coletafront/package.json
+++ b/user/coletafront/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
+    "carousel": "^0.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
